Helper scripts, enable smp 4 cores

--- a/sel4.toml
+++ b/sel4.toml
@@ -7,11 +7,11 @@ KernelHaveFPU = true
 cross_compiler_prefix = "arm-linux-gnueabihf-"
 
 [build.sabre.debug]
-make_root_task = "./cargo-build.sh --target=armv7-unknown-linux-gnueabihf -vv"
+make_root_task = "./workspace-build-wrapper.sh --target=armv7-unknown-linux-gnueabihf"
 root_task_image = "target/armv7-unknown-linux-gnueabihf/debug/root-task"
 
 [build.sabre.release]
-make_root_task = "./cargo-build.sh --target=armv7-unknown-linux-gnueabihf --release"
+make_root_task = "./workspace-build-wrapper.sh --target=armv7-unknown-linux-gnueabihf --release"
 root_task_image = "target/armv7-unknown-linux-gnueabihf/release/root-task"
 
 [sel4]
@@ -49,7 +49,7 @@ KernelNumPriorities = 256
 KernelStackBits = 12
 KernelTimeSlice = 5
 KernelTimerTickMS = 2
-KernelMaxNumNodes = 1
+KernelMaxNumNodes = 4
 KernelRetypeFanOutLimit = 16384
 KernelRootCNodeSizeBits = 19
 KernelMaxNumBootinfoUntypedCaps = 230
