--- a/root-task/Cargo.toml
+++ b/root-task/Cargo.toml
@@ -12,7 +12,7 @@ ferros = { git = "https://github.com/auxoncorp/ferros" }
 typenum = "1.10"
 xmas-elf = "0.7"
 
-hello-printer = { path = "../hello-printer" }
+hello-printer = { path = "../applications/hello-printer" }
 
 [build-dependencies]
 ferros-build = { git = "https://github.com/auxoncorp/ferros" }
