Add interrupt driver UART console proc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = [
     "imx6-devices",
     "imx6-hal",
-    "applications/hello-printer",
+    "applications/console",
     "root-task",
 ]
 
