--- a/imx6-hal/Cargo.toml
+++ b/imx6-hal/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["Jon Lamb"]
 edition = "2021"
 
 [dependencies]
+embedded-hal = "0.2"
+nb = "0.1"
+
+[dependencies.imx6-devices]
+path = "../imx6-devices"
