--- a/drivers/persistent-storage/Cargo.toml
+++ b/drivers/persistent-storage/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "console"
+name = "persistent-storage"
 version = "0.1.0"
 authors = ["Jon Lamb"]
 edition = "2021"
@@ -8,8 +8,10 @@ edition = "2021"
 selfe-sys = { git = "https://github.com/auxoncorp/selfe-sys" }
 selfe-runtime = { git = "https://github.com/auxoncorp/selfe-sys", features = ["panic_handler"] }
 ferros = { git = "https://github.com/auxoncorp/ferros.git" }
-menu = "0.3"
 log = "0.4"
+
+[dependencies.iomux]
+path = "../iomux"
 
 [dependencies.sabrelite-bsp]
 path = "../../sabrelite-bsp"
