Add build-time RUST_ENV logging control

--- a/sabrelite-bsp/Cargo.toml
+++ b/sabrelite-bsp/Cargo.toml
@@ -3,6 +3,7 @@ name = "sabrelite-bsp"
 version = "0.1.0"
 authors = ["Jon Lamb"]
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 ferros = { git = "https://github.com/auxoncorp/ferros.git" }
