Connect persistent-storage IPC to console app

--- a/applications/console/Cargo.toml
+++ b/applications/console/Cargo.toml
@@ -13,3 +13,6 @@ log = "0.4"
 
 [dependencies.sabrelite-bsp]
 path = "../../sabrelite-bsp"
+
+[dependencies.persistent-storage]
+path = "../../drivers/persistent-storage"
