--- a/drivers/persistent-storage/Cargo.toml
+++ b/drivers/persistent-storage/Cargo.toml
@@ -10,6 +10,7 @@ selfe-runtime = { git = "https://github.com/auxoncorp/selfe-sys", features = ["p
 ferros = { git = "https://github.com/auxoncorp/ferros.git" }
 log = "0.4"
 static_assertions = "1.1"
+heapless = "0.7"
 
 [dependencies.iomux]
 path = "../iomux"
