--- a/imx6-hal/Cargo.toml
+++ b/imx6-hal/Cargo.toml
@@ -19,6 +19,10 @@ default-features = false
 version = "0.4"
 default-features = false
 
+[dependencies.void]
+version = "1.0"
+default-features = false
+
 [dependencies.net-types]
 path = "../libraries/net-types"
 
