--- a/drivers/enet/Cargo.toml
+++ b/drivers/enet/Cargo.toml
@@ -10,8 +10,11 @@ selfe-runtime = { git = "https://github.com/auxoncorp/selfe-sys", features = ["p
 ferros = { git = "https://github.com/auxoncorp/ferros.git" }
 log = "0.4"
 
+[dependencies.imx6-hal]
+path = "../../imx6-hal"
+
+[dependencies.debug-logger]
+path = "../../libraries/debug-logger"
+
 [dependencies.net-types]
 path = "../../libraries/net-types"
-
-[dependencies.sabrelite-bsp]
-path = "../../sabrelite-bsp"
