--- a/root-task/Cargo.toml
+++ b/root-task/Cargo.toml
@@ -13,6 +13,15 @@ typenum = "1.10"
 xmas-elf = "0.7"
 log = "0.4"
 
+[dependencies.net-types]
+path = "../libraries/net-types"
+
+[dependencies.debug-logger]
+path = "../libraries/debug-logger"
+
+[dependencies.imx6-hal]
+path = "../imx6-hal"
+
 [dependencies.iomux]
 path = "../drivers/iomux"
 
@@ -28,11 +37,6 @@ path = "../drivers/persistent-storage"
 [dependencies.console]
 path = "../applications/console"
 
-[dependencies.net-types]
-path = "../libraries/net-types"
-
-[dependencies.sabrelite-bsp]
-path = "../sabrelite-bsp"
-
 [build-dependencies]
 ferros-build = { git = "https://github.com/auxoncorp/ferros" }
+built = "0.5"
