--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 resolver = "2"
 members = [
     "libraries/net-types",
+    "libraries/debug-logger",
     "imx6-devices",
     "imx6-hal",
-    "sabrelite-bsp",
     "drivers/iomux",
     "drivers/enet",
     "drivers/persistent-storage",
