--- a/drivers/tcpip/Cargo.toml
+++ b/drivers/tcpip/Cargo.toml
@@ -12,11 +12,14 @@ log = "0.4"
 static_assertions = "1.1"
 typenum = "1.10"
 
+[dependencies.imx6-hal]
+path = "../../imx6-hal"
+
+[dependencies.debug-logger]
+path = "../../libraries/debug-logger"
+
 [dependencies.net-types]
 path = "../../libraries/net-types"
-
-[dependencies.sabrelite-bsp]
-path = "../../sabrelite-bsp"
 
 [dependencies.smoltcp]
 version = "0.7"
