--- a/libraries/debug-logger/Cargo.toml
+++ b/libraries/debug-logger/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sabrelite-bsp"
+name = "debug-logger"
 version = "0.1.0"
 authors = ["Jon Lamb"]
 edition = "2021"
@@ -7,8 +7,4 @@ build = "build.rs"
 
 [dependencies]
 ferros = { git = "https://github.com/auxoncorp/ferros.git" }
-bitflags = "1.3"
 log = "0.4"
-
-[dependencies.imx6-hal]
-path = "../imx6-hal"
