Add UART1 serial IOMUX config and device init, works on hw

--- a/applications/console/Cargo.toml
+++ b/applications/console/Cargo.toml
@@ -20,5 +20,8 @@ path = "../../libraries/debug-logger"
 [dependencies.net-types]
 path = "../../libraries/net-types"
 
+[dependencies.iomux]
+path = "../../drivers/iomux"
+
 [dependencies.persistent-storage]
 path = "../../drivers/persistent-storage"
